--- a/public/css/pages/_home.scss
+++ b/public/css/pages/_home.scss
@@ -1,30 +1,64 @@
 main.home{
-  display: flex;
-  justify-content: center;
-  gap: 40px;
-  height: auto;
-  section.bg-info{
-    width: 500px;
-    height: 50%;
-    img{
-      width: 100%;
-      height: 100%;
-      border-radius: 10px;
-    }
-  }
-  section.info{
-    width: 750px;
-    height: 500px;
+  padding-left: 50px;
+  padding-right: 50px;
+
+  section {
     display: flex;
-    padding: 20px;
-    flex-direction: column;
-    justify-content: space-around;
-    border: 0.5px black solid;
-    border-radius: 10px;
-    background: linear-gradient(90deg, rgba(111,0,255,0.3) 0%, rgba(255,255,255,1) 50%);
-    div{
+    justify-content: center;
+    gap: 40px;
+    height: auto;
+
+    section.bg-info {
+      width: 50%;
+      height: 50%;
+
+      img {
+        width: 100%;
+        height: 100%;
+        border-radius: 10px;
+      }
+    }
+
+    section.info {
+      width: 50%;
+      height: auto;
       display: flex;
-      gap: 20px;
+      padding: 20px;
+      flex-direction: column;
+      justify-content: center;
+      border-radius: 10px;
+      gap: 15%;
+
+      h2{
+        font-size: 50px;
+
+        span{
+          background: mediumpurple;
+          border-radius: 20px;
+          padding: 5px;
+          color: white;
+        }
+      }
+
+      p{
+        font-size: 20px;
+        width: 90%;
+        line-height: 30px;
+      }
+
+      div {
+        display: flex;
+        align-items: center;
+        gap: 5%;
+
+        .linkContact{
+          background: mediumpurple;
+          padding: 15px;
+          border-radius: 20px;
+          font-size: 20px;
+          color: white;
+        }
+      }
     }
   }
 }
