--- a/public/css/pages/_home.scss
+++ b/public/css/pages/_home.scss
@@ -1,19 +1,21 @@
 main.home{
   padding-left: 50px;
   padding-right: 50px;
+  height: auto;
 
   section {
     display: flex;
     justify-content: center;
+    padding-top: 20px;
     gap: 40px;
     height: auto;
 
     section.bg-info {
       width: 50%;
-      height: 50%;
+      height: auto;
 
       img {
-        width: 100%;
+        width: 90%;
         height: 100%;
         border-radius: 10px;
       }
@@ -31,9 +33,10 @@ main.home{
 
       h2{
         font-size: 50px;
+        color: white;
 
         span{
-          background: mediumpurple;
+          background: #FFBD59;
           border-radius: 20px;
           padding: 5px;
           color: white;
@@ -44,15 +47,26 @@ main.home{
         font-size: 20px;
         width: 90%;
         line-height: 30px;
+        color: white;
       }
 
       div {
         display: flex;
         align-items: center;
         gap: 5%;
+        color: #FFBD59;
+
+        img{
+          background: #FFBD59;
+          border-radius: 20px;
+          padding: 5px;
+          width: 30px;
+          height: 30px;
+          fill: white;
+        }
 
         .linkContact{
-          background: mediumpurple;
+          background: #FFBD59;
           padding: 15px;
           border-radius: 20px;
           font-size: 20px;
