--- a/public/css/style.scss
+++ b/public/css/style.scss
@@ -1,3 +1,3 @@
 @import "basis/_resets";
 @import "components/_header";
-@import "pages/_home";
+@import "pages/_home", "pages/_contact", "pages/projets";
